tests/invalid/For_Invalid_1.whiley
method f([int] args) -> int:
    int i = 1
    for i in args:
        r = r + i
    return i
